--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "./public/electron.js",
   "homepage": "",
   "dependencies": {
+    "@tensorflow/tfjs": "^3.19.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
